# aws-dbt-practive

./: .gitignore  pyproject.toml
athena/: dbt_project.yml
athena/models/: event_incremental.sql  event_sales.sql  event_yearly_sales.sql  sales_event_join.sql  schema.yml
src/aws_dbt_practice/: __init__.py
